--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@builder.io/qwik": "0.9.0",
     "@builder.io/qwik-city": "0.0.111",
+    "@netlify/vite-plugin-netlify-edge": "^1.1.0",
     "@types/eslint": "8.4.6",
     "@types/node": "latest",
     "@typescript-eslint/eslint-plugin": "5.37.0",
