--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
-    "qwik": "qwik"
+    "qwik": "qwik",
+    "serve": "netlify dev"
   },
   "devDependencies": {
     "@builder.io/qwik": "0.9.0",
