--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
     "qwik": "qwik",
+    "build.server": "vite build --ssr src/entry.netlify-edge.tsx",
     "serve": "netlify dev"
   },
   "devDependencies": {
@@ -35,5 +36,22 @@
     "typescript": "4.8.3",
     "vite": "3.1.1",
     "vite-tsconfig-paths": "3.5.0"
+  },
+  "__qwik__": {
+    "priority": -1,
+    "viteConfig": {
+      "imports": [
+        {
+          "defaultImport": "netlifyEdge",
+          "importPath": "@netlify/vite-plugin-netlify-edge"
+        }
+      ],
+      "qwikViteConfig": {
+        "ssr": "{ outDir: 'netlify/edge-functions/entry.netlify-edge' }"
+      },
+      "vitePlugins": [
+        "netlifyEdge({ functionName: 'entry.netlify-edge' })"
+      ]
+    }
   }
 }
